--- a/Extra_Test.ipynb
+++ b/Extra_Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e5588d3b",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1ffbffcf",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f544a915",
    "metadata": {},
    "outputs": [],
@@ -244,9 +244,8 @@
     "        print(\"Allocated quantity too small for even one lot.\")\n",
     "        return None\n",
     "\n",
-    "    # Add premium received to capital\n",
+    "    # Add premium received\n",
     "    premium_received = (ce_bid + pe_bid) * lot_s * num_lots\n",
-    "    capital += premium_received\n",
     "\n",
     "    # Construct keys\n",
     "    ce_key = f\"{stock_name}_{atm_strike}_CE\"\n",
@@ -256,7 +255,8 @@
     "    portfolio = {\n",
     "        ce_key: -lot_s * num_lots,  # short CE\n",
     "        pe_key: -lot_s * num_lots,  # short PE\n",
-    "        \"premium_received_from_straddle\": premium_received\n",
+    "        \"premium_received_from_straddle\": premium_received,\n",
+    "        \"pnl\": premium_received  # Initial PnL is just the premium received\n",
     "    }\n",
     "\n",
     "    # Store in a log dictionary keyed by first_datetime\n",
@@ -352,7 +352,7 @@
     "            pe_key: -lot_s * num_lots,  # short PE\n",
     "            \"vwap_of_futures_held\": vwap_of_futures_held,\n",
     "            \"net_futures_held\": net_futures_held,\n",
-    "            \"pnl\": value_held_for_futures\n",
+    "            \"pnl\": value_held_for_futures + premium_received\n",
     "        }\n",
     "        portfolio_log[t] = portfolio\n",
     "\n",
@@ -363,72 +363,50 @@
     "    # Snapshot at 15:30 on last day\n",
     "    snapshot_1530 = frame_df[frame_df['Date Time'] == unwind_time]\n",
     "\n",
-    "    if snapshot_1530.empty:\n",
-    "        print(\"No data at 15:30 on last day — cannot unwind positions properly.\")\n",
-    "    else:\n",
-    "        # Unwind short straddle: buy CE and PE at AskPrice\n",
-    "        ce_ask = snapshot_1530[(snapshot_1530['Strike'] == atm_strike) & (snapshot_1530['Type'] == 'CE')]['AskPrice']\n",
-    "        pe_ask = snapshot_1530[(snapshot_1530['Strike'] == atm_strike) & (snapshot_1530['Type'] == 'PE')]['AskPrice']\n",
+    "    # if snapshot_1530.empty:\n",
+    "    #     print(\"No data at 15:30 on last day — cannot unwind positions properly.\")\n",
+    "    #     return None\n",
+    "    # else:\n",
+    "    #     ce_ask = snapshot_1530[(snapshot_1530['Strike'] == atm_strike) & (snapshot_1530['Type'] == 'CE')]['AskPrice']\n",
+    "    #     pe_ask = snapshot_1530[(snapshot_1530['Strike'] == atm_strike) & (snapshot_1530['Type'] == 'PE')]['AskPrice']\n",
     "\n",
-    "        if ce_ask.empty or pe_ask.empty:\n",
-    "            print(\"Missing CE or PE ask price at 15:30 on last day — skipping unwind of options.\")\n",
+    "    #     if ce_ask.empty or pe_ask.empty:\n",
+    "    #         print(\"Missing CE or PE ask price at 15:30 on last day — skipping unwind of options.\")\n",
+    "    #     else:\n",
+    "    #         ce_ask_price = ce_ask.iloc[0]\n",
+    "    #         pe_ask_price = pe_ask.iloc[0]\n",
+    "\n",
+    "    # Close any remaining futures hedge\n",
+    "    if net_futures_held != 0:\n",
+    "        futures_price = snapshot_1530['Spot'].iloc[0]\n",
+    "        final_cost_for_futures = futures_price * abs(net_futures_held)\n",
+    "\n",
+    "        if net_futures_held > 0:\n",
+    "            # Sell futures to close long\n",
+    "            action = 'sell_to_close_futures'\n",
+    "            portfolio = {\n",
+    "                \"pnl\": value_held_for_futures + premium_received + final_cost_for_futures - abs(atm_strike - snapshot_1530['Spot'].iloc[0]) * lot_s * num_lots\n",
+    "            }\n",
     "        else:\n",
-    "            ce_ask_price = ce_ask.iloc[0]\n",
-    "            pe_ask_price = pe_ask.iloc[0]\n",
+    "            # Buy futures to close short\n",
+    "            action = 'buy_to_close_futures'\n",
+    "            portfolio = {\n",
+    "                \"pnl\": value_held_for_futures + premium_received - final_cost_for_futures - abs(atm_strike - snapshot_1530['Spot'].iloc[0]) * lot_s * num_lots\n",
+    "            }\n",
     "\n",
-    "            cost_to_close = (ce_ask_price + pe_ask_price) * lot_s * num_lots\n",
-    "            capital -= cost_to_close  # Buying back options costs capital\n",
-    "\n",
-    "#             trade_log.append({\n",
-    "#                 'action': 'buyback_straddle',\n",
-    "#                 'time': unwind_time,\n",
-    "#                 'strike': atm_strike,\n",
-    "#                 'ce_ask': ce_ask_price,\n",
-    "#                 'pe_ask': pe_ask_price,\n",
-    "#                 'lots': num_lots,\n",
-    "#                 'total_cost': cost_to_close\n",
-    "#             })\n",
-    "\n",
-    "#         Close any remaining futures hedge\n",
-    "#         if net_futures_held != 0:\n",
-    "#             futures_price = snapshot_1530['Spot'].iloc[0]\n",
-    "#             notional = futures_price * abs(net_futures_held)\n",
-    "\n",
-    "#             if net_futures_held > 0:\n",
-    "#                 # Sell futures to close long\n",
-    "#                 capital += notional\n",
-    "#                 action = 'sell_to_close_futures'\n",
-    "#             else:\n",
-    "#                 # Buy futures to close short\n",
-    "#                 capital -= notional\n",
-    "#                 action = 'buy_to_close_futures'\n",
-    "\n",
-    "#             trade_log.append({\n",
-    "#                 'action': action,\n",
-    "#                 'time': unwind_time,\n",
-    "#                 'lots': abs(net_futures_held),\n",
-    "#                 'price': futures_price,\n",
-    "#                 'notional': notional,\n",
-    "#                 'net_futures_held_after': 0\n",
-    "#             })\n",
-    "\n",
-    "#             net_futures_held = 0  # Reset position\n",
-    "    \n",
-    "#     # Return all logs and ending state\n",
-    "#     return {\n",
-    "#     \"starting_cash\": cash,\n",
-    "#     \"ending_cash\": capital,\n",
-    "#     \"trades_executed\": len(trade_log),\n",
-    "#     \"trade_log\": trade_log,\n",
-    "#     \"hedge_timestamps\": hedge_timestamps,\n",
-    "#     \"delta_log\": delta_log,\n",
-    "#     \"final_net_futures_held\": net_futures_held  \n",
-    "# }"
+    "        net_futures_held = 0  # Reset position\n",
+    "        portfolio_log[unwind_time] = portfolio\n",
+    "    else:\n",
+    "        action = 'no_futures_to_close'\n",
+    "        portfolio_log[unwind_time] = {\n",
+    "            \"pnl\": value_held_for_futures + premium_received - abs(atm_strike - snapshot_1530['Spot'].iloc[0]) * lot_s * num_lots\n",
+    "        }\n",
+    "    return portfolio_log, delta_log, action, snapshot_1530, atm_strike, net_futures_held, value_held_for_futures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1da31266",
    "metadata": {},
    "outputs": [],
@@ -457,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "065582af",
    "metadata": {},
    "outputs": [],
@@ -468,22 +446,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "19d77937",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stock_frames.append(build_yearly_frames(stocks[1]))"
+    "stock_frames.append(build_yearly_frames(stocks[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "3aa15b68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing CE or PE ask price at 15:30 on last day — skipping unwind of options.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m p_log, d_log \u001b[38;5;241m=\u001b[39m process_expiry_frame(stock_frames[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m], cash\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, lot_s\u001b[38;5;241m=\u001b[39mlot_sizes[\u001b[38;5;241m0\u001b[39m], allocated_lots\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m, hedge_interval_minutes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+     ]
+    }
+   ],
    "source": [
-    "p_log, d_log = process_expiry_frame(stock_frames[1][0], cash=0, lot_s=lot_sizes[1], allocated_lots=1000, hedge_interval_minutes=5)"
+    "p_log, d_log = process_expiry_frame(stock_frames[0][0], cash=0, lot_s=lot_sizes[0], allocated_lots=1000, hedge_interval_minutes=5)"
    ]
   },
   {
